fix: make less than 0 alpha logic actually accessible

--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
 
                         if (star.alpha > 0) {
                             star.alpha -= 0.1;
-
-                            if (star.alpha < 0) {
-                                star.alpha = 0;
-                            }
+                        } else {
+                            star.alpha = 0;
                         }
 
                         // Twinkle logic
