fix: clear canvas and reinitialise stars array on resize

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
 
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        starsArray = [];
+
         // Re-add the stars
         stars();
     });
