fix: twinkle sliiiiiightly slower

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         ctx.fillStyle = star.colour;
 
                         if (star.alpha > 0) {
-                            star.alpha -= 0.1;
+                            star.alpha = star.alpha - 0.06;
                         }
 
                         // Twinkle logic
